# llmnomadschemagenerator

./: .gitignore  README.md  Test_1.ipynb  fetch_nomad_schema.ipynb  llm.py  llmschemagen.py  nomad_schema.ipynb  original_prompt.txt  output.archive.yaml  output.schema.archive.yaml  output2.schema.archive.yaml  paper_generated.archive.yaml  pyproject.toml  requirements.txt  schema.archive.yml  streamlittest.py  text.txt
